--- a/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
@@ -4,7 +4,9 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" />
 
 
-
+<div class="row my-5">
+    <div class="display-6 text-primary text-center">@Model.ProjectName's Tasks</div>
+</div>
 
 <div class="row justify-content-start">
     <div class="col-3">
