--- a/TaskMaster.Web/Pages/ProjectIssue/GetProjectIssues.cshtml
+++ b/TaskMaster.Web/Pages/ProjectIssue/GetProjectIssues.cshtml
@@ -1,245 +1,176 @@
 @page "/issues"
 @model TaskMaster.Web.Pages.ProjectIssue.GetProjectIssues
 
-<style>
-    .filterable {
-        margin-top: 15px;
-    }
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" />
 
-        .filterable .panel-heading .pull-right {
-            margin-top: -20px;
-        }
 
-        .filterable .filters input[disabled] {
-            background-color: transparent;
-            border: none;
-            cursor: auto;
-            box-shadow: none;
-            padding: 0;
-            height: auto;
-        }
+<div class="row my-5">
+    <div class="display-6 text-primary text-center">@Model.ProjectName's Issues</div>
+</div>
 
-            .filterable .filters input[disabled]::-webkit-input-placeholder {
-                color: #333;
-            }
-
-            .filterable .filters input[disabled]::-moz-placeholder {
-                color: #333;
-            }
-
-            .filterable .filters input[disabled]:-ms-input-placeholder {
-                color: #333;
-            }
-
-    textarea {
-        resize: none;
-    }
-</style>
-
-<div class="row">
-    <div class="panel panel-primary filterable">
-        <div class="panel-heading">
-            <h3 class="panel-title text-center display-6">@Model.ProjectName's Issues</h3>
-            <div class="pull-right my-3 text-start">
-                <button class="btn btn-secondary btn-sm btn-filter"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-filter"></i></button>
-                <button id="createButton" class="btn btn-secondary btn-sm text-end mx-2"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-square-plus"></i></button>
-                <a class="btn btn-warning btn-sm text-black" asp-page="/Project/GetProjectDetails" asp-route-id="@TempData["projectId"]"><i class="fa-solid fa-backward"></i><span> Back</span></a>
-            </div>
-        </div>
-        <table class="table table-bordered text-black">
-            <thead>
-                <tr class="filters bg-secondary">
-                    <th><input type="text" class="form-control" placeholder="Name" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Priority" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Starting" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Status" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Explation" disabled></th>
-                    <th>ACTIONS</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.Issues)
-                {
-                    if (item.IsActive)
-                    {
-                        <tr class="bg-primary">
-                            <td>@item.Name</td>
-                            @if (item.PriorityLevel == "High")
-                            {
-                                <td class="bg-danger">@item.PriorityLevel</td>
-                            }
-                            else if (item.PriorityLevel == "Medium")
-                            {
-                                <td class="bg-warning">@item.PriorityLevel</td>
-                            }
-                            else
-                            {
-                                <td class="bg-success">@item.PriorityLevel</td>
-                            }
-                            <td>@item.StartingDate!.Value.ToShortDateString()</td>
-                            <td>@item.IssueStatus</td>
-                            <td>@item.StatusExplation</td>
-                            <td>
-                                <a asp-page="/ProjectIssue/UpdateIssue" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/ProjectIssue/DeleteIssue" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>
-                                <a asp-page="/ProjectIssue/GetIssueDetails" asp-route-id="@item.Id"><i class="fa-solid fa-circle-info text-black"></i></a>
-                            </td>
-                        </tr>
-                    }
-                    else
-                    {
-                        <tr class="bg-danger">
-                            <td>@item.Name</td>
-                            @if (item.PriorityLevel == "High")
-                            {
-                                <td class="bg-danger">@item.PriorityLevel</td>
-                            }
-                            else if (item.PriorityLevel == "Medium")
-                            {
-                                <td class="bg-danger">@item.PriorityLevel</td>
-                            }
-                            else
-                            {
-                                <td class="bg-success">@item.PriorityLevel</td>
-                            }
-                            <td>@item.StartingDate!.Value.ToShortDateString()</td>
-                            <td>@item.IssueStatus</td>
-                            <td>@item.StatusExplation</td>
-                            <td>
-                                <a asp-page="/ProjectIssue/UpdateIssue" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/ProjectIssue/DeleteIssue" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black mx-1"></i></a>
-                                <a asp-page="/ProjectIssue/GetIssueDetails" asp-route-id="@item.Id"><i class="fa-solid fa-circle-info text-black"></i></a>
-                            </td>
-                        </tr>
-                    }
-                }
-
-            </tbody>
-        </table>
+<div class="row justify-content-start">
+    <div class="col-3">
+        <button data-bs-toggle="modal" data-bs-target="#createIssueModal" class="btn btn-secondary btn-sm text-end mx-2"><i class="fa-solid fa-square-plus"></i></button>
     </div>
 </div>
 
+
+
+
+<!--Reading-->
+
+<div class="row my-4">
+    <div class="text-center">
+        <span class="fw-bold">Priority: </span>
+        <span class="badge badge-pill badge-danger">High</span>
+        <span class="badge badge-pill badge-warning">Medium</span>
+        <span class="badge badge-pill badge-success">Low</span>
+    </div>
+</div>
+
+
+<div class="row d-flex mx-1">
+    <div class="col">
+        <div class="text-center text-bg-secondary text-white my-1 fw-bold">Fixed</div>
+        <hr />
+
+        @foreach (var item in Model.Issues)
+        {
+
+            @if (item.ResolutionStatus == Core.Enums.ResolutionStatus.Unresolved.ToString())
+            {
+                <div class="card col my-2">
+                    <div class="card-body">
+                        @if (item.PriorityLevel == Core.Enums.PriorityLevel.High.ToString())
+                        {
+                            <span class="badge badge-pill badge-danger">   </span>
+                        }
+                        else if (item.PriorityLevel == Core.Enums.PriorityLevel.Low.ToString())
+                        {
+                            <span class="badge badge-pill badge-success">   </span>
+                        }
+                        else
+                        {
+                            <span class="badge badge-pill badge-warning">   </span>
+                        }
+                        <h5 class="card-title">@item.Summary</h5>
+                        <a asp-page="/ProjectIssue/UpdateIssue" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+
+                        <hr />
+                        <form method="post">
+                            <input type="hidden" name="taskStatus" value="Progress" />
+                            <button type="submit" class="btn btn-primary btn-sm d-inline-flex" asp-route-taskId="@item.Id" asp-page-handler="UpdateTaskStatus">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </form>
+
+                    </div>
+                </div>
+            }
+
+        }
+    </div>
+    <div class="col">
+        <div class="text-center text-bg-secondary text-white my-1 fw-bold">Unresolved</div>
+        <hr />
+        @foreach (var item in Model.Issues)
+        {
+            @if (item.ResolutionStatus == Core.Enums.ResolutionStatus.Fixed.ToString())
+            {
+                <div class="card col my-2">
+                    <div class="card-body">
+                        @if (item.PriorityLevel == Core.Enums.PriorityLevel.High.ToString())
+                        {
+                            <span class="badge badge-pill badge-danger">   </span>
+                        }
+                        else if (item.PriorityLevel == Core.Enums.PriorityLevel.Low.ToString())
+                        {
+                            <span class="badge badge-pill badge-success">   </span>
+                        }
+                        else
+                        {
+                            <span class="badge badge-pill badge-warning">   </span>
+                        }
+                        <h5 class="card-title">@item.Summary</h5>
+                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+
+
+                        <hr />
+                        <form method="post">
+                            <input type="hidden" name="taskStatus" value="ToDo" />
+                            <button type="submit" class="btn btn-warning btn-sm d-inline-flex" asp-route-taskId="@item.Id" asp-page-handler="UpdateTaskStatus">
+                                <i class="fa-solid fa-arrow-left"></i>
+                            </button>
+                        </form>
+                        <form method="post">
+                            <input type="hidden" name="taskStatus" value="Review" />
+                            <button type="submit" class="btn btn-primary btn-sm d-inline-flex" asp-route-taskId="@item.Id" asp-page-handler="UpdateTaskStatus">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </form>
+
+                    </div>
+                </div>
+            }
+
+        }
+    </div>
+</div>
 
 <!--Create-->
-<div class="row" style="display:none" id="createRow">
-    <div class="col-12">
-        <form method="post">
-            @*<input type="hidden" asp-for="CreateIssue.ProjectId" />*@
-            <div class="col-8 offset-2 d-inline-flex">
-                <div class="col-8 form-group">
-                    <span> Title</span>
-                    <input asp-for="CreateIssue.Name" type="text" class="form-control">
-                </div>
+
+<div class="modal fade" id="createIssueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Creating Issue</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="col-8 offset-2 d-inline-flex mt-1">
-                <div class="col-4 form-group">
-                    <span> Description</span>
-                    <textarea class="form-control" asp-for="CreateIssue.Description" rows="3"></textarea>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col">
+                        <form method="post">
+                            <input type="hidden" asp-for="CreateIssue.ProjectId" />
+
+                            <div class="col-12 form-group">
+                                <span> Summary</span>
+                                <input asp-for="CreateIssue.Summary" type="text" class="form-control">
+                            </div>
+
+                            <div class="col-12 d-inline-flex">
+                                <div class="col-6 form-group">
+                                    <span> Status</span>
+                                    <select asp-for="CreateIssue.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select">
+                                        <option value="">Choose..</option>
+                                    </select>
+                                </div>
+                                <div class="col-6 form-group">
+                                    <span> Starting</span>
+                                    <input type="date" class="form-control" asp-for="CreateIssue.StartingDate">
+                                </div>
+                            </div>
+
+                            
+                            <div class="col-12 form-group">
+                                <span> Commment</span>
+                                <textarea class="form-control" asp-for="CreateIssue.Comment" rows="3"></textarea>
+                            </div>
+                            <div class="col-12 form-group">
+
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+
+                            </div>
+                        </form>
+                    </div>
                 </div>
+
             </div>
-            <div class="col-8 offset-2 d-inline-flex mt-1">
-                <div class="col-4 form-group mx-1">
-                    <span> Status</span>
-                    <select asp-for="CreateIssue.IssueStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.TaskStatusDto>()" class="form-control form-select">
-                        <option value="">Choose..</option>
-                    </select>
-                </div>
-                <div class="col-4 form-group mx-1">
-                    <span> Priority</span>
-                    <select asp-for="CreateIssue.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select">
-                        <option value="">Choose..</option>
-                    </select>
-                </div>
+            <div class="modal-footer">
             </div>
-            <div class="col-8 offset-2 d-inline-flex mt-1">
-                <div class="col-4 form-group">
-                    <span> Starting</span>
-                    <input type="date" class="form-control" asp-for="CreateIssue.StartingDate">
-                </div>
-            </div>
-            <div class="col-8 offset-2 d-inline-flex mt-1">
-                <div class="col-4 form-group">
-                    <span> Finished</span>
-                    <input type="date" class="form-control" asp-for="CreateIssue.FinishedDate">
-                </div>
-            </div>
-            <div class="col-8 offset-2 d-inline-flex mt-1">
-                <div class="col-8 form-group mx-1">
-                    <span> Explation</span>
-                    <textarea class="form-control" asp-for="CreateIssue.StatusExplation" rows="3"></textarea>
-                </div>
-            </div>
-            <div class="col-8 offset-2 text-center mt-2">
-                <div class="col-8 form-group">
-                    <button type="submit" class="btn btn-success btn-sm"><i class="fa-solid fa-floppy-disk"></i> Save</button>
-                    <a class="btn btn-warning btn-sm mx-3"><i class="fa-solid fa-rectangle-xmark"></i><span> Back</span></a>
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-@section Scripts{
-
-    <script>
-
-        // Filter
-        $(document).ready(function () {
-            $('.filterable .btn-filter').click(function () {
-                var $panel = $(this).parents('.filterable'),
-                    $filters = $panel.find('.filters input'),
-                    $tbody = $panel.find('.table tbody');
-                if ($filters.prop('disabled') == true) {
-                    $filters.prop('disabled', false);
-                    $filters.first().focus();
-                } else {
-                    $filters.val('').prop('disabled', true);
-                    $tbody.find('.no-result').remove();
-                    $tbody.find('tr').show();
-                }
-            });
-
-            $('.filterable .filters input').keyup(function (e) {
-                /* Ignore tab key */
-                var code = e.keyCode || e.which;
-                if (code == '9') return;
-                /* Useful DOM data and selectors */
-                var $input = $(this),
-                    inputContent = $input.val().toLowerCase(),
-                    $panel = $input.parents('.filterable'),
-                    column = $panel.find('.filters th').index($input.parents('th')),
-                    $table = $panel.find('.table'),
-                    $rows = $table.find('tbody tr');
-                /* Dirtiest filter function ever ;) */
-                var $filteredRows = $rows.filter(function () {
-                    var value = $(this).find('td').eq(column).text().toLowerCase();
-                    return value.indexOf(inputContent) === -1;
-                });
-                /* Clean previous no-result if exist */
-                $table.find('tbody .no-result').remove();
-                /* Show all rows, hide filtered ones (never do that outside of a demo ! xD) */
-                $rows.show();
-                $filteredRows.hide();
-                /* Prepend no-result row if all rows are filtered */
-                if ($filteredRows.length === $rows.length) {
-                    $table.find('tbody').prepend($('<tr class="no-result text-center"><td colspan="' + $table.find('.filters th').length + '">No result found</td></tr>'));
-                }
-            });
-        });
-
-        // Create
-
-        $(document).ready(() => {
-
-            $("#createButton").click(() => {
-                $("#createRow").toggle(1000);
-            });
-
-            $("#cancelButton").click(() => {
-                $("#createRow").toggle(1000);
-            });
-        });
-
-
-    </script>
-}
