ProjectIssue delete page was created

--- a/TaskMaster.Web/Pages/ProjectIssue/UpdateIssue.cshtml
+++ b/TaskMaster.Web/Pages/ProjectIssue/UpdateIssue.cshtml
@@ -1,4 +1,4 @@
-﻿@page "update-issue"
+﻿@page "/update-issue"
 @model TaskMaster.Web.Pages.ProjectIssue.UpdateIssueModel
 
 <div class="row justify-content-center">
